// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`react-project > react-project 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react-perf/jsx-no-new-array-as-prop": "error",
      "react-perf/jsx-no-new-function-as-prop": "error",
      "react-perf/jsx-no-new-object-as-prop": "error",
      "react/display-name": "error",
      "react/error-boundaries": "error",
      "react/exhaustive-deps": "warn",
      "react/globals": "error",
      "react/immutability": "error",
      "react/incompatible-library": "warn",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/preserve-manual-memoization": "error",
      "react/purity": "error",
      "react/refs": "error",
      "react/rules-of-hooks": "error",
      "react/set-state-in-effect": "error",
      "react/set-state-in-render": "error",
      "react/static-components": "error",
      "react/unsupported-syntax": "warn",
      "react/use-memo": "error",
      "react/void-use-memo": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-vars",
      "react/no-deprecated",
      "react/prop-types",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [],
}
`;

exports[`react-project --js-plugins > react-project--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react-perf/jsx-no-new-array-as-prop": "error",
      "react-perf/jsx-no-new-function-as-prop": "error",
      "react-perf/jsx-no-new-object-as-prop": "error",
      "react/display-name": "error",
      "react/error-boundaries": "error",
      "react/exhaustive-deps": "warn",
      "react/globals": "error",
      "react/immutability": "error",
      "react/incompatible-library": "warn",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/preserve-manual-memoization": "error",
      "react/purity": "error",
      "react/refs": "error",
      "react/rules-of-hooks": "error",
      "react/set-state-in-effect": "error",
      "react/set-state-in-render": "error",
      "react/static-components": "error",
      "react/unsupported-syntax": "warn",
      "react/use-memo": "error",
      "react/void-use-memo": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-vars",
      "react/no-deprecated",
      "react/prop-types",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [],
}
`;

exports[`react-project --type-aware > react-project--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react-perf/jsx-no-new-array-as-prop": "error",
      "react-perf/jsx-no-new-function-as-prop": "error",
      "react-perf/jsx-no-new-object-as-prop": "error",
      "react/display-name": "error",
      "react/error-boundaries": "error",
      "react/exhaustive-deps": "warn",
      "react/globals": "error",
      "react/immutability": "error",
      "react/incompatible-library": "warn",
      "react/jsx-key": "error",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-duplicate-props": "error",
      "react/jsx-no-target-blank": "error",
      "react/jsx-no-undef": "error",
      "react/no-children-prop": "error",
      "react/no-danger-with-children": "error",
      "react/no-direct-mutation-state": "error",
      "react/no-find-dom-node": "error",
      "react/no-is-mounted": "error",
      "react/no-render-return-value": "error",
      "react/no-string-refs": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/preserve-manual-memoization": "error",
      "react/purity": "error",
      "react/refs": "error",
      "react/rules-of-hooks": "error",
      "react/set-state-in-effect": "error",
      "react/set-state-in-render": "error",
      "react/static-components": "error",
      "react/unsupported-syntax": "warn",
      "react/use-memo": "error",
      "react/void-use-memo": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-vars",
      "react/no-deprecated",
      "react/prop-types",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [],
}
`;

exports[`react-project merge > react-project--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "plugins": [
      "react",
      "react-perf",
    ],
    "rules": {
      "react/display-name": "error",
      "react/exhaustive-deps": "warn",
      "react/incompatible-library": "warn",
      "react/jsx-no-comment-textnodes": "error",
      "react/jsx-no-target-blank": "error",
      "react/no-unescaped-entities": "error",
      "react/no-unknown-property": "error",
      "react/no-unsafe": "off",
      "react/react-in-jsx-scope": "error",
      "react/rules-of-hooks": "error",
      "react/unsupported-syntax": "warn",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [],
    "nursery": [
      "react/require-render-return",
    ],
    "type-aware": [],
    "unsupported": [
      "react/jsx-uses-vars",
      "react/no-deprecated",
      "react/prop-types",
      "react-hooks/config",
      "react-hooks/gating",
    ],
  },
  "warnings": [],
}
`;
